one final version

--- a/CRF_tagger_withoutClaimClassification.ipynb
+++ b/CRF_tagger_withoutClaimClassification.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "## Read\n",
-    "anno_text_ank = open(\"ConLLformat_annotator_ank.txt\").read()\n",
-    "anno_text_ian = open(\"ConLLformat_annotator_ian.txt\").read()\n",
+    "anno_text_ank = open(\"Data/ConLLformat_annotator_ank.txt\").read()\n",
+    "anno_text_ian = open(\"Data/ConLLformat_annotator_ian.txt\").read()\n",
     "\n",
     "## Combine\n",
     "anno_data = anno_text_ian.split(\"\\n\")\n",
@@ -275,7 +275,7 @@
    "source": [
     "# Provide a file name as a parameter to the train function, such that\n",
     "# the model will be saved to the file when training is finished\n",
-    "# trainer.train('crf_KyotoData_version_1.model')"
+    "# trainer.train('Pickles/crf_KyotoData_version_1.model')"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "source": [
     "## Once the tagger is done and dusted we test it on the test data\n",
     "tagger = pycrfsuite.Tagger()\n",
-    "tagger.open('crf_KyotoData_version_1.model')\n",
+    "tagger.open('Pickles/crf_KyotoData_version_1.model')\n",
     "y_pred = [tagger.tag(xseq) for xseq in X_test]\n",
     "\n",
     "# Let's take a look at a random sample in the testing set\n",
