--- a/CRF_ActorClaim_tagger.ipynb
+++ b/CRF_ActorClaim_tagger.ipynb
@@ -36,12 +36,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datafolder = \"Data/\"\n",
+    "savefolder = \"Save/\"\n",
+    "pickle_folder = \"Pickles/\"\n",
     "\n",
     "# Read\n",
-    "anno_text_ank = open(\"ConLLformat_annotator_ank.txt\").read()\n",
-    "anno_text_ian = open(\"ConLLformat_annotator_ian.txt\").read()\n",
+    "anno_text_ank = open(folder+\"ConLLformat_annotator_ank.txt\").read()\n",
+    "anno_text_ian = open(folder+\"ConLLformat_annotator_ian.txt\").read()\n",
     "## Reading the claims cluster to include it in the tags\n",
-    "with open(\"clustered_claims_final1.pkl\", 'rb') as f:\n",
+    "with open(pickle_folder+\"clustered_claims_final1.pkl\", 'rb') as f:\n",
     "    claim_text = pickle.load(f)[0]\n",
     "\n",
     "## Combine\n",
@@ -243,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(\"supp_opp_final1.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"supp_opp_final1.pkl\", 'wb') as f:\n",
     "#     pickle.dump(sup_opp, f)"
    ]
   },
@@ -9518,14 +9521,14 @@
     "#      'c1': 0.85,\n",
     "#     'c2': 0.0094\n",
     "## clustered claims\n",
-    "#1# ctrainer.train('crf_KyotoData_version_all_withKmeans_500iter.model')   #  25% test split  # some zero-labels in testsplit\n",
-    "#2# ctrainer.train('crf_KyotoData_version_all_withKmeans_1000iter.model')      #  30% test split\n",
-    "# ctrainer.train('crf_KyotoData_version_all_withKmeans_1500iter.model')      #  30% test split\n",
+    "#1# ctrainer.train(pickle_folder+'crf_KyotoData_version_all_withKmeans_500iter.model')   #  25% test split  # some zero-labels in testsplit\n",
+    "#2# ctrainer.train(pickle_folder+'crf_KyotoData_version_all_withKmeans_1000iter.model')      #  30% test split\n",
+    "# ctrainer.train(pickle_folder+'crf_KyotoData_version_all_withKmeans_1500iter.model')      #  30% test split\n",
     "\n",
     "## unclustered claims\n",
-    "#1# trainer.train('crf_KyotoData_version_all_noClus_500iter.model')    #  25% test split\n",
-    "#2# trainer.train('crf_KyotoData_version_all_noClus_1000iter.model')       #  30% test split\n",
-    "#3# trainer.train('crf_KyotoData_version_all_noClus_1500iter.model')        #  30% test split"
+    "#1# trainer.train(pickle_folder+'crf_KyotoData_version_all_noClus_500iter.model')    #  25% test split\n",
+    "#2# trainer.train(pickle_folder+'crf_KyotoData_version_all_noClus_1000iter.model')       #  30% test split\n",
+    "#3# trainer.train(pickle_folder+'crf_KyotoData_version_all_noClus_1500iter.model')        #  30% test split"
    ]
   },
   {
@@ -9544,24 +9547,24 @@
     "## Freezing test/train for displaying model features later\n",
     "## Clustered\n",
     "#1#\n",
-    "# with open(\"testtrain_withKmeans_500iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_withKmeans_500iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([X_train, X_test, y_train, y_test], f)  \n",
     "#2#\n",
-    "# with open(\"testtrain_withKmeans_1000iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_withKmeans_1000iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([X_train, X_test, y_train, y_test], f)  \n",
     "#3#\n",
-    "# with open(\"testtrain_withKmeans_1500iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_withKmeans_1500iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([cX_train, cX_test, cy_train, cy_test], f)\n",
     "\n",
     "## Unclustered\n",
     "#1#\n",
-    "# with open(\"testtrain_noClus_500iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_noClus_500iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([X_train, X_test, y_train, y_test], f)  \n",
     "#2#\n",
-    "# with open(\"testtrain_noClus_1000iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_noClus_1000iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([X_train, X_test, y_train, y_test], f) \n",
     "# #3#\n",
-    "# with open(\"testtrain_noClus_1500iter.pkl\", 'wb') as f:\n",
+    "# with open(pickle_folder+\"testtrain_noClus_1500iter.pkl\", 'wb') as f:\n",
     "#     pickle.dump([X_train, X_test, y_train, y_test], f)"
    ]
   },
@@ -9581,8 +9584,8 @@
    "source": [
     "## Once the tagger is done and dusted we test it on the test data\n",
     "tagger = pycrfsuite.Tagger()\n",
-    "tagger.open('crf_KyotoData_version_all_withKmeans_1500iter.model')\n",
-    "             # crf_KyotoData_version_all_noClus_1500iter.model\n",
+    "tagger.open(pickle_folder+'crf_KyotoData_version_all_withKmeans_1500iter.model')  ## with claim cluster\n",
+    "             # pickle_folder+\"crf_KyotoData_version_all_noClus_1500iter.model\"    ## without claim cluster\n",
     "\n",
     "def prediction(X_test):\n",
     "    y_pred = [tagger.tag(xseq) for xseq in X_test]\n",
