--- a/CRF_ActorClaim_tagger.ipynb
+++ b/CRF_ActorClaim_tagger.ipynb
@@ -41,8 +41,8 @@
     "pickle_folder = \"Pickles/\"\n",
     "\n",
     "# Read\n",
-    "anno_text_ank = open(folder+\"ConLLformat_annotator_ank.txt\").read()\n",
-    "anno_text_ian = open(folder+\"ConLLformat_annotator_ian.txt\").read()\n",
+    "anno_text_ank = open(savefolder+\"ConLLformat_annotator_ank.txt\").read()\n",
+    "anno_text_ian = open(savefolder+\"ConLLformat_annotator_ian.txt\").read()\n",
     "## Reading the claims cluster to include it in the tags\n",
     "with open(pickle_folder+\"clustered_claims_final1.pkl\", 'rb') as f:\n",
     "    claim_text = pickle.load(f)[0]\n",
