updated the folder options for pickle & save files

--- a/KMeans_Claim_Custering.ipynb
+++ b/KMeans_Claim_Custering.ipynb
@@ -20,7 +20,8 @@
     "import os\n",
     "import codecs\n",
     "from sklearn import feature_extraction\n",
-    "import mpld3"
+    "import mpld3\n",
+    "import pickle"
    ]
   },
   {
@@ -29,8 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "claim_text_ank = open(\"Claims_ank.txt\").read()\n",
-    "claim_text_ian = open(\"Claims_ian.txt\").read()"
+    "datafolder = \"Data/\"\n",
+    "savefolder = \"Save/\"\n",
+    "pickle_folder = \"Pickles/\"\n",
+    "\n",
+    "claim_text_ank = open(savefolder+\"Claims_ank.txt\").read()\n",
+    "claim_text_ian = open(savefolder+\"Claims_ian.txt\").read()"
    ]
   },
   {
@@ -474,12 +479,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open(\"clustered_claims_final1.pkl\", 'wb') as f:\n",
-    "    ##                    max_df,min_df,ngram_range\n",
-    "    pickle.dump([claim_list,top6_cluster_features,0.1, 0.01,(1,6)], f)\n",
-    "with open(\"clean_actors_final1.pkl\", 'wb') as f:\n",
-    "    pickle.dump(actor, f)    "
+    "# import pickle\n",
+    "# with open(pickle_folder+\"clustered_claims_final1.pkl\", 'wb') as f:\n",
+    "#     ##                    max_df,min_df,ngram_range\n",
+    "#     pickle.dump([claim_list,top6_cluster_features,0.1, 0.01,(1,6)], f)\n",
+    "# with open(pickle_folder+\"clean_actors_final1.pkl\", 'wb') as f:\n",
+    "#     pickle.dump(actor, f)    "
    ]
   },
   {
@@ -1783,7 +1788,7 @@
    "source": [
     "#uncomment the below to export to html\n",
     "html = mpld3.fig_to_html(fig)\n",
-    "htmlfile = open(\"clustered_claims__final1.html\", 'w')\n",
+    "htmlfile = open(savefolder+\"clustered_claims__final1.html\", 'w')\n",
     "htmlfile.write(html)\n",
     "htmlfile.close()"
    ]
