--- a/BiLSTM_model_tagger.ipynb
+++ b/BiLSTM_model_tagger.ipynb
@@ -299,47 +299,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 04:51:07,829 [INFO] kashgari - model saved to /project/ClimaChange_Claims/saved_act_claim_model_relu_1\n",
-      "2021-05-05 04:51:07,936 [DEBUG] kashgari - ------------------------------------------------\n",
-      "2021-05-05 04:51:07,937 [DEBUG] kashgari - Loaded transformer model's vocab\n",
-      "2021-05-05 04:51:07,938 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
-      "2021-05-05 04:51:07,939 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
-      "2021-05-05 04:51:07,940 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
-      "2021-05-05 04:51:07,940 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
-      "2021-05-05 04:51:07,941 [DEBUG] kashgari - ------------------------------------------------\n"
+      "2021-05-05 05:16:12,207 [DEBUG] kashgari - ------------------------------------------------\n",
+      "2021-05-05 05:16:12,209 [DEBUG] kashgari - Loaded transformer model's vocab\n",
+      "2021-05-05 05:16:12,209 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
+      "2021-05-05 05:16:12,210 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
+      "2021-05-05 05:16:12,211 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
+      "2021-05-05 05:16:12,212 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
+      "2021-05-05 05:16:12,213 [DEBUG] kashgari - ------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Model data will save to 'saved_act_claim_model' folder\n",
-    "model.save('saved_act_claim_model_relu_1')\n",
+    "# model.save('saved_act_claim_model_relu_1')\n",
     "loaded_model = BiLSTM_Model.load_model('saved_act_claim_model_relu_1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 04:52:09,322 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 19)\n"
+      "2021-05-05 05:16:26,435 [WARNING] kashgari - Sequence length is None, will use the max length of the samples, which is 26\n",
+      "2021-05-05 05:16:26,437 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 26)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Thinking', 'further', ',', 'he', 'adds', ':', \"'\", \"'\", 'The', 'problem', 'is', ',', 'we', \"'ve\", 'gone', 'too', 'far', 'already', '.']\n",
+      "['Britain', \"'s\", 'Foreign', 'Secretary', ',', 'Robin', 'Cook', ',', 'said', 'on', 'Monday', 'that', 'this', 'meant', 'the', 'American', 'people', 'as', 'well', 'as', 'the', 'Clinton', 'Administration', '.']\n",
+      "WARNING:tensorflow:5 out of the last 25 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7f3b3fe352f0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
       "1/1 [==============================] - 3s 3s/step\n"
      ]
     },
@@ -347,8 +348,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 04:52:11,931 [DEBUG] kashgari - predict output: (1, 19)\n",
-      "2021-05-05 04:52:11,933 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0]]\n"
+      "2021-05-05 05:16:29,583 [DEBUG] kashgari - predict output: (1, 26)\n",
+      "2021-05-05 05:16:29,585 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0]]\n"
      ]
     },
     {
@@ -370,18 +371,25 @@
        "  'O',\n",
        "  'O',\n",
        "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
        "  'O']]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load saved model\n",
-    "print(test_x[12])\n",
-    "loaded_model.predict(test_x[11:12])"
+    "print(test_x[112])\n",
+    "loaded_model.predict(test_x[112:113])"
    ]
   }
  ],
