bilstm+crf models

--- a/BiLSTM_CRF_model_tagger.ipynb
+++ b/BiLSTM_CRF_model_tagger.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "## Libraries\n",
-    "from kashgari.tasks.labeling import BiLSTM_Model\n",
+    "from kashgari.tasks.labeling import BiLSTM_CRF_Model\n",
     "from kashgari.embeddings import BertEmbedding\n",
     "import numpy as np"
    ]
@@ -19,10 +19,6 @@
    "outputs": [],
    "source": [
     "## DATA\n",
-    "# SAVE_DATA_clus_tr = \"Save/clus_bistlstm_dataset_train.csv\"\n",
-    "# SAVE_DATA_clus_ts = \"Save/clus_bistlstm_dataset_test.csv\"\n",
-    "# SAVE_DATA_clus_dv = \"Save/clus_bistlstm_dataset_dev.csv\"\n",
-    "\n",
     "SAVE_DATA_noclus_tr = \"Save/noclus_bistlstm_dataset_train.csv\"\n",
     "SAVE_DATA_noclus_ts = \"Save/noclus_bistlstm_dataset_test.csv\"\n",
     "SAVE_DATA_noclus_dv = \"Save/noclus_bistlstm_dataset_dev.csv\"\n",
@@ -81,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +115,12 @@
     "## labels\n",
     "train_y = list(total_y[:train])\n",
     "test_y = list(total_y[train:(train+test)])\n",
-    "valid_y = list(total_y[(train+test):])"
+    "valid_y = list(total_y[(train+test):])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {
     "scrolled": false
    },
@@ -142,55 +138,55 @@
     "## BERT_Tiny_2_128\n",
     "## cased_L-12_H-768_A-12\n",
     "\n",
-    "bert_embed = BertEmbedding('BERTmodels/BERT_Tiny_2_128')\n",
-    "model = BiLSTM_Model()\n",
-    "hyper = model.default_hyper_parameters()\n",
+    "# bert_embed = BertEmbedding('BERTmodels/BERT_Tiny_2_128')\n",
+    "# model = BiLSTM_CRF_Model()\n",
+    "# hyper = model.default_hyper_parameters()\n",
     "\n",
-    "hyper['layer_blstm']['units'] = 32\n",
-    "hyper['layer_dropout']['rate'] = 0.8\n",
-    "hyper['layer_activation']['activation'] = 'softmax'\n",
-    "model = BiLSTM_Model(bert_embed, sequence_length=32,hyper_parameters=hyper)\n",
+    "# hyper['layer_blstm']['units'] = 32\n",
+    "# hyper['layer_dropout']['rate'] = 0.8\n",
+    "# hyper['layer_activation']['activation'] = 'softmax'\n",
+    "# model = BiLSTM_CRF_Model(bert_embed, sequence_length=50,hyper_parameters=hyper)\n",
     "\n",
     "print(hyper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "## training the model with our data for 1000 epochs\n",
+    "## Model training\n",
     "# model.fit(train_x, train_y, valid_x, valid_y,epochs=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:44,711 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 119)\n"
+      "2021-05-05 14:23:34,174 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 93)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20/20 [==============================] - 1s 64ms/step\n"
+      "20/20 [==============================] - 1s 52ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:46,095 [DEBUG] kashgari - predict output: (617, 119)\n",
-      "2021-05-05 13:50:46,097 [DEBUG] kashgari - predict output argmax: [[0 1 1 ... 1 1 1]\n",
+      "2021-05-05 14:23:35,307 [DEBUG] kashgari - predict output: (617, 93)\n",
+      "2021-05-05 14:23:35,308 [DEBUG] kashgari - predict output argmax: [[0 1 1 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " ...\n",
@@ -206,29 +202,32 @@
       "\n",
       "           precision    recall  f1-score   support\n",
       "\n",
-      "    CLAIM     0.2069    0.1314    0.1607       137\n",
-      "      ACT     0.0000    0.0000    0.0000        78\n",
+      "    CLAIM     0.6455    0.5462    0.5917       130\n",
+      "      ACT     0.5070    0.4286    0.4645        84\n",
       "\n",
-      "micro avg     0.1875    0.0837    0.1158       215\n",
-      "macro avg     0.1318    0.0837    0.1024       215\n",
+      "micro avg     0.5912    0.5000    0.5418       214\n",
+      "macro avg     0.5911    0.5000    0.5418       214\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'detail': {'CLAIM': {'precision': 0.20689655172413793,\n",
-       "   'recall': 0.13138686131386862,\n",
-       "   'f1-score': 0.1607142857142857,\n",
-       "   'support': 137},\n",
-       "  'ACT': {'precision': 0.0, 'recall': 0.0, 'f1-score': 0, 'support': 78}},\n",
-       " 'precision': 0.1318364073777065,\n",
-       " 'recall': 0.08372093023255814,\n",
-       " 'f1-score': 0.10240863787375415,\n",
-       " 'support': 215}"
+       "{'detail': {'CLAIM': {'precision': 0.6454545454545455,\n",
+       "   'recall': 0.5461538461538461,\n",
+       "   'f1-score': 0.5916666666666667,\n",
+       "   'support': 130},\n",
+       "  'ACT': {'precision': 0.5070422535211268,\n",
+       "   'recall': 0.42857142857142855,\n",
+       "   'f1-score': 0.46451612903225803,\n",
+       "   'support': 84}},\n",
+       " 'precision': 0.5911244869386241,\n",
+       " 'recall': 0.5,\n",
+       " 'f1-score': 0.5417571098382072,\n",
+       " 'support': 214}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,58 +239,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:51,501 [INFO] kashgari - model saved to /project/ClimaChange_Claims/saved_act_claim_model_1000_dropout_0.8_BERTtiny_2\n",
-      "2021-05-05 13:50:51,631 [DEBUG] kashgari - ------------------------------------------------\n",
-      "2021-05-05 13:50:51,642 [DEBUG] kashgari - Loaded transformer model's vocab\n",
-      "2021-05-05 13:50:51,643 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
-      "2021-05-05 13:50:51,644 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
-      "2021-05-05 13:50:51,645 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
-      "2021-05-05 13:50:51,646 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
-      "2021-05-05 13:50:51,646 [DEBUG] kashgari - ------------------------------------------------\n"
+      "2021-05-05 14:24:01,109 [DEBUG] kashgari - ------------------------------------------------\n",
+      "2021-05-05 14:24:01,110 [DEBUG] kashgari - Loaded transformer model's vocab\n",
+      "2021-05-05 14:24:01,111 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
+      "2021-05-05 14:24:01,112 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
+      "2021-05-05 14:24:01,112 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
+      "2021-05-05 14:24:01,113 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
+      "2021-05-05 14:24:01,114 [DEBUG] kashgari - ------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Model data will save to 'saved_act_claim_model' folder\n",
-    "# model.save('saved_act_claim_model_1000_dropout_0.8_BERTtiny_2')\n",
-    "loaded_model = BiLSTM_Model.load_model('saved_act_claim_model_1000_dropout_0.8_BERTtiny_2')"
+    "# model.save('saved_act_claim_model_1000_BERTtiny_bilstmcrf_2')\n",
+    "loaded_model = BiLSTM_CRF_Model.load_model('saved_act_claim_model_1000_BERTtiny_bilstmcrf_2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:54,785 [WARNING] kashgari - Sequence length is None, will use the max length of the samples, which is 38\n",
-      "2021-05-05 13:50:54,786 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 38)\n"
+      "2021-05-05 14:25:11,868 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 52)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['But', 'out', 'of', 'fear', 'that', 'emissions', 'controls', 'would', 'be', 'prohibitively', 'expensive', ',', 'the', 'Administration', 'now', 'is', 'considering', 'putting', 'a', 'cap', 'on', 'the', 'price', 'of', 'the', 'permits', 'and', 'guaranteeing', 'to', 'sell', 'additional', 'permits', 'at', 'that', 'price', '.']\n",
-      "1/1 [==============================] - 4s 4s/step\n"
+      "['Clinton', 'is', 'to', 'address', 'the', 'gathering', 'on', 'Thursday', ',', 'amid', 'intense', 'criticism', 'from', 'environmental', 'advocates', 'who', 'say', 'his', 'Administration', 'is', 'not', 'taking', 'a', 'firm', 'enough', 'stance', 'in', 'negotiations', ',', 'scheduled', 'to', 'be', 'concluded', 'in', 'December', 'in', 'Kyoto', ',', 'Japan', ',', 'aimed', 'at', 'setting', 'binding', 'targets', 'for', 'reducing', 'greenhouse', 'gases', '.']\n",
+      "1/1 [==============================] - 0s 32ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:58,640 [DEBUG] kashgari - predict output: (1, 38)\n",
-      "2021-05-05 13:50:58,641 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 2 1 2 2 2 2 2 2\n",
-      "  1 0]]\n"
+      "2021-05-05 14:25:11,943 [DEBUG] kashgari - predict output: (1, 52)\n",
+      "2021-05-05 14:25:11,944 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 5 3 1 1 1 4 2 2 2 2 2 1 2 2 2 2 2 2\n",
+      "  2 2 1 1 1 1 1 4 2 2 2 2 2 2 1 0]]\n"
      ]
     },
     {
@@ -314,18 +311,32 @@
        "  'O',\n",
        "  'O',\n",
        "  'O',\n",
+       "  'B-ACT',\n",
+       "  'I-ACT',\n",
        "  'O',\n",
        "  'O',\n",
        "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
+       "  'B-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
        "  'O',\n",
        "  'I-CLAIM',\n",
        "  'I-CLAIM',\n",
-       "  'O',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
+       "  'I-CLAIM',\n",
        "  'I-CLAIM',\n",
        "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'B-CLAIM',\n",
        "  'I-CLAIM',\n",
        "  'I-CLAIM',\n",
        "  'I-CLAIM',\n",
@@ -335,15 +346,15 @@
        "  'O']]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load predict model\n",
-    "print(test_x[112])\n",
-    "loaded_model.predict(test_x[112:113])"
+    "print(test_x[291])\n",
+    "loaded_model.predict(test_x[291:292])"
    ]
   }
  ],
