--- a/BiLSTM_model_tagger.ipynb
+++ b/BiLSTM_model_tagger.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {
     "scrolled": false
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -168,29 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:44,711 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 119)\n"
+      "2021-05-05 14:31:49,353 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 94)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20/20 [==============================] - 1s 64ms/step\n"
+      "20/20 [==============================] - 1s 45ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:46,095 [DEBUG] kashgari - predict output: (617, 119)\n",
-      "2021-05-05 13:50:46,097 [DEBUG] kashgari - predict output argmax: [[0 1 1 ... 1 1 1]\n",
+      "2021-05-05 14:31:50,335 [DEBUG] kashgari - predict output: (617, 94)\n",
+      "2021-05-05 14:31:50,337 [DEBUG] kashgari - predict output argmax: [[0 1 1 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " ...\n",
@@ -206,29 +206,32 @@
       "\n",
       "           precision    recall  f1-score   support\n",
       "\n",
-      "    CLAIM     0.2069    0.1314    0.1607       137\n",
-      "      ACT     0.0000    0.0000    0.0000        78\n",
+      "    CLAIM     0.1414    0.0892    0.1094       157\n",
+      "      ACT     0.1111    0.0114    0.0206        88\n",
       "\n",
-      "micro avg     0.1875    0.0837    0.1158       215\n",
-      "macro avg     0.1318    0.0837    0.1024       215\n",
+      "micro avg     0.1389    0.0612    0.0850       245\n",
+      "macro avg     0.1305    0.0612    0.0775       245\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'detail': {'CLAIM': {'precision': 0.20689655172413793,\n",
-       "   'recall': 0.13138686131386862,\n",
-       "   'f1-score': 0.1607142857142857,\n",
-       "   'support': 137},\n",
-       "  'ACT': {'precision': 0.0, 'recall': 0.0, 'f1-score': 0, 'support': 78}},\n",
-       " 'precision': 0.1318364073777065,\n",
-       " 'recall': 0.08372093023255814,\n",
-       " 'f1-score': 0.10240863787375415,\n",
-       " 'support': 215}"
+       "{'detail': {'CLAIM': {'precision': 0.1414141414141414,\n",
+       "   'recall': 0.08917197452229299,\n",
+       "   'f1-score': 0.10937499999999999,\n",
+       "   'support': 157},\n",
+       "  'ACT': {'precision': 0.1111111111111111,\n",
+       "   'recall': 0.011363636363636364,\n",
+       "   'f1-score': 0.020618556701030927,\n",
+       "   'support': 88}},\n",
+       " 'precision': 0.1305297876726448,\n",
+       " 'recall': 0.06122448979591836,\n",
+       " 'f1-score': 0.07749513465179886,\n",
+       " 'support': 245}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,21 +243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:51,501 [INFO] kashgari - model saved to /project/ClimaChange_Claims/saved_act_claim_model_1000_dropout_0.8_BERTtiny_2\n",
-      "2021-05-05 13:50:51,631 [DEBUG] kashgari - ------------------------------------------------\n",
-      "2021-05-05 13:50:51,642 [DEBUG] kashgari - Loaded transformer model's vocab\n",
-      "2021-05-05 13:50:51,643 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
-      "2021-05-05 13:50:51,644 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
-      "2021-05-05 13:50:51,645 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
-      "2021-05-05 13:50:51,646 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
-      "2021-05-05 13:50:51,646 [DEBUG] kashgari - ------------------------------------------------\n"
+      "2021-05-05 14:32:09,087 [DEBUG] kashgari - ------------------------------------------------\n",
+      "2021-05-05 14:32:09,088 [DEBUG] kashgari - Loaded transformer model's vocab\n",
+      "2021-05-05 14:32:09,089 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
+      "2021-05-05 14:32:09,090 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
+      "2021-05-05 14:32:09,091 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
+      "2021-05-05 14:32:09,091 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
+      "2021-05-05 14:32:09,092 [DEBUG] kashgari - ------------------------------------------------\n"
      ]
     }
    ],
@@ -266,76 +268,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:54,785 [WARNING] kashgari - Sequence length is None, will use the max length of the samples, which is 38\n",
-      "2021-05-05 13:50:54,786 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 38)\n"
+      "2021-05-05 14:55:33,754 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 39)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['But', 'out', 'of', 'fear', 'that', 'emissions', 'controls', 'would', 'be', 'prohibitively', 'expensive', ',', 'the', 'Administration', 'now', 'is', 'considering', 'putting', 'a', 'cap', 'on', 'the', 'price', 'of', 'the', 'permits', 'and', 'guaranteeing', 'to', 'sell', 'additional', 'permits', 'at', 'that', 'price', '.']\n",
-      "1/1 [==============================] - 4s 4s/step\n"
+      "['This', 'sort', 'of', 'fuzzy', 'thinking', 'provides', 'the', 'warm', 'illusion', 'of', 'saving', 'the', 'sky', ',', 'which', 'we', \"'re\", 'not', 'even', 'sure', 'needs', 'saving', ',', 'but', 'it', 'wo', \"n't\", 'have', 'any', 'impact', 'at', 'all', 'on', 'global', 'warming', ',', \"''\"]\n",
+      "1/1 [==============================] - 0s 25ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 13:50:58,640 [DEBUG] kashgari - predict output: (1, 38)\n",
-      "2021-05-05 13:50:58,641 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 1 2 1 2 2 2 2 2 2\n",
-      "  1 0]]\n"
+      "2021-05-05 14:55:33,823 [DEBUG] kashgari - predict output: (1, 39)\n",
+      "2021-05-05 14:55:33,824 [DEBUG] kashgari - predict output argmax: [[0 1 2 2 2 2 2 2 2 2 2 2 2 2 1 2 2 2 2 2 2 2 2 1 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      "  1 1 0]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'O',\n",
-       "  'I-CLAIM',\n",
-       "  'O',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'O']]"
+       "'O I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM O I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM O I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM O O'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +309,7 @@
    "source": [
     "# Load predict model\n",
     "print(test_x[112])\n",
-    "loaded_model.predict(test_x[112:113])"
+    "(\" \").join((loaded_model.predict(test_x[112:113]))[0])"
    ]
   }
  ],
