--- a/BiLSTM_CRF_model_tagger.ipynb
+++ b/BiLSTM_CRF_model_tagger.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -120,39 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'layer_blstm': {'units': 32, 'return_sequences': True}, 'layer_dropout': {'rate': 0.8}, 'layer_time_distributed': {}, 'layer_activation': {'activation': 'softmax'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## using pretrained embeddings to fine tune for task\n",
     "## BERT_Tiny_2_128\n",
     "## cased_L-12_H-768_A-12\n",
     "\n",
-    "# bert_embed = BertEmbedding('BERTmodels/BERT_Tiny_2_128')\n",
-    "# model = BiLSTM_CRF_Model()\n",
-    "# hyper = model.default_hyper_parameters()\n",
+    "bert_embed = BertEmbedding('BERTmodels/BERT_Tiny_2_128')\n",
+    "model = BiLSTM_CRF_Model()\n",
+    "hyper = model.default_hyper_parameters()\n",
     "\n",
-    "# hyper['layer_blstm']['units'] = 32\n",
-    "# hyper['layer_dropout']['rate'] = 0.8\n",
-    "# hyper['layer_activation']['activation'] = 'softmax'\n",
-    "# model = BiLSTM_CRF_Model(bert_embed, sequence_length=50,hyper_parameters=hyper)\n",
+    "hyper['layer_blstm']['units'] = 32\n",
+    "hyper['layer_dropout']['rate'] = 0.8\n",
+    "hyper['layer_activation']['activation'] = 'softmax'\n",
+    "model = BiLSTM_CRF_Model(bert_embed, sequence_length=50,hyper_parameters=hyper)\n",
     "\n",
     "print(hyper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -164,29 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 14:23:34,174 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 93)\n"
+      "2021-05-05 14:36:39,032 [DEBUG] kashgari - predict seq_length: None, input: (2, 617, 95)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20/20 [==============================] - 1s 52ms/step\n"
+      "20/20 [==============================] - 1s 53ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 14:23:35,307 [DEBUG] kashgari - predict output: (617, 93)\n",
-      "2021-05-05 14:23:35,308 [DEBUG] kashgari - predict output argmax: [[0 1 1 ... 1 1 1]\n",
+      "2021-05-05 14:36:40,186 [DEBUG] kashgari - predict output: (617, 95)\n",
+      "2021-05-05 14:36:40,188 [DEBUG] kashgari - predict output argmax: [[0 5 3 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " [0 1 1 ... 1 1 1]\n",
       " ...\n",
@@ -202,32 +194,32 @@
       "\n",
       "           precision    recall  f1-score   support\n",
       "\n",
-      "    CLAIM     0.6455    0.5462    0.5917       130\n",
-      "      ACT     0.5070    0.4286    0.4645        84\n",
+      "    CLAIM     0.5410    0.4371    0.4835       151\n",
+      "      ACT     0.5432    0.4490    0.4916        98\n",
       "\n",
-      "micro avg     0.5912    0.5000    0.5418       214\n",
-      "macro avg     0.5911    0.5000    0.5418       214\n",
+      "micro avg     0.5419    0.4418    0.4867       249\n",
+      "macro avg     0.5419    0.4418    0.4867       249\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'detail': {'CLAIM': {'precision': 0.6454545454545455,\n",
-       "   'recall': 0.5461538461538461,\n",
-       "   'f1-score': 0.5916666666666667,\n",
-       "   'support': 130},\n",
-       "  'ACT': {'precision': 0.5070422535211268,\n",
-       "   'recall': 0.42857142857142855,\n",
-       "   'f1-score': 0.46451612903225803,\n",
-       "   'support': 84}},\n",
-       " 'precision': 0.5911244869386241,\n",
-       " 'recall': 0.5,\n",
-       " 'f1-score': 0.5417571098382072,\n",
-       " 'support': 214}"
+       "{'detail': {'CLAIM': {'precision': 0.5409836065573771,\n",
+       "   'recall': 0.4370860927152318,\n",
+       "   'f1-score': 0.4835164835164836,\n",
+       "   'support': 151},\n",
+       "  'ACT': {'precision': 0.5432098765432098,\n",
+       "   'recall': 0.4489795918367347,\n",
+       "   'f1-score': 0.49162011173184356,\n",
+       "   'support': 98}},\n",
+       " 'precision': 0.5418598092024036,\n",
+       " 'recall': 0.44176706827309237,\n",
+       " 'f1-score': 0.4867058632960229,\n",
+       " 'support': 249}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,20 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 14:24:01,109 [DEBUG] kashgari - ------------------------------------------------\n",
-      "2021-05-05 14:24:01,110 [DEBUG] kashgari - Loaded transformer model's vocab\n",
-      "2021-05-05 14:24:01,111 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
-      "2021-05-05 14:24:01,112 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
-      "2021-05-05 14:24:01,112 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
-      "2021-05-05 14:24:01,113 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
-      "2021-05-05 14:24:01,114 [DEBUG] kashgari - ------------------------------------------------\n"
+      "2021-05-05 14:39:45,654 [DEBUG] kashgari - ------------------------------------------------\n",
+      "2021-05-05 14:39:45,655 [DEBUG] kashgari - Loaded transformer model's vocab\n",
+      "2021-05-05 14:39:45,656 [DEBUG] kashgari - config_path       : BERTmodels/BERT_Tiny_2_128/bert_config.json\n",
+      "2021-05-05 14:39:45,657 [DEBUG] kashgari - vocab_path      : BERTmodels/BERT_Tiny_2_128/vocab.txt\n",
+      "2021-05-05 14:39:45,658 [DEBUG] kashgari - checkpoint_path : BERTmodels/BERT_Tiny_2_128/bert_model.ckpt\n",
+      "2021-05-05 14:39:45,659 [DEBUG] kashgari - Top 50 words    : ['[PAD]', '[unused0]', '[unused1]', '[unused2]', '[unused3]', '[unused4]', '[unused5]', '[unused6]', '[unused7]', '[unused8]', '[unused9]', '[unused10]', '[unused11]', '[unused12]', '[unused13]', '[unused14]', '[unused15]', '[unused16]', '[unused17]', '[unused18]', '[unused19]', '[unused20]', '[unused21]', '[unused22]', '[unused23]', '[unused24]', '[unused25]', '[unused26]', '[unused27]', '[unused28]', '[unused29]', '[unused30]', '[unused31]', '[unused32]', '[unused33]', '[unused34]', '[unused35]', '[unused36]', '[unused37]', '[unused38]', '[unused39]', '[unused40]', '[unused41]', '[unused42]', '[unused43]', '[unused44]', '[unused45]', '[unused46]', '[unused47]', '[unused48]']\n",
+      "2021-05-05 14:39:45,659 [DEBUG] kashgari - ------------------------------------------------\n"
      ]
     }
    ],
@@ -264,97 +256,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 14:25:11,868 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 52)\n"
+      "2021-05-05 14:55:08,715 [DEBUG] kashgari - predict seq_length: None, input: (2, 1, 57)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Clinton', 'is', 'to', 'address', 'the', 'gathering', 'on', 'Thursday', ',', 'amid', 'intense', 'criticism', 'from', 'environmental', 'advocates', 'who', 'say', 'his', 'Administration', 'is', 'not', 'taking', 'a', 'firm', 'enough', 'stance', 'in', 'negotiations', ',', 'scheduled', 'to', 'be', 'concluded', 'in', 'December', 'in', 'Kyoto', ',', 'Japan', ',', 'aimed', 'at', 'setting', 'binding', 'targets', 'for', 'reducing', 'greenhouse', 'gases', '.']\n",
-      "1/1 [==============================] - 0s 32ms/step\n"
+      "The memo had its effect last Friday , when Dr. Watson lost his bid for re - election after the administration threw its weight behind the ' ' let 's drag our feet ' ' candidate , Dr. Rajendra Pachauri of New Delhi , who is known for his virulent anti - American statements .\n",
+      "1/1 [==============================] - 0s 34ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-05-05 14:25:11,943 [DEBUG] kashgari - predict output: (1, 52)\n",
-      "2021-05-05 14:25:11,944 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 5 3 1 1 1 4 2 2 2 2 2 1 2 2 2 2 2 2\n",
-      "  2 2 1 1 1 1 1 4 2 2 2 2 2 2 1 0]]\n"
+      "2021-05-05 14:55:08,788 [DEBUG] kashgari - predict output: (1, 57)\n",
+      "2021-05-05 14:55:08,790 [DEBUG] kashgari - predict output argmax: [[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 4 2 2 2\n",
+      "  2 1 2 2 2 2 2 2 1 1 1 1 1 1 1 1 1 1 1 1 0]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'B-ACT',\n",
-       "  'I-ACT',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'B-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'O',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'O',\n",
-       "  'B-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'I-CLAIM',\n",
-       "  'O']]"
+       "'O O O O O O O O O O O O O O O O O O O O O O O O O O O O O O O B-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM O I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM I-CLAIM O O O O O O O O O O O O'"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load predict model\n",
-    "print(test_x[291])\n",
-    "loaded_model.predict(test_x[291:292])"
+    "print((\" \").join(test_x[15]))\n",
+    "(\" \").join((loaded_model.predict(test_x[15:16]))[0])"
    ]
   }
  ],
